--- a/src/app/webpages/login/login.component.scss
+++ b/src/app/webpages/login/login.component.scss
@@ -1,5 +1,38 @@
+.head-display
+{background-color: paleturquoise;
+    width: 100%;
+    height: 100%;
+}
+
 .card-display
 {
-    size: 50px;
-    justify-content: center;
+    
+    border-radius: 20px;
+    margin: 20%;
+    
+}
+
+.button
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-display #loginBtn
+{
+    margin-bottom: 10px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.card-display #registerBtn
+{
+    margin-bottom: 10px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.login-card
+{
+        box-shadow: none;
 }
