--- a/src/app/webpages/login/login.component.html
+++ b/src/app/webpages/login/login.component.html
@@ -1,5 +1,5 @@
-<mat-card class="head-display">
-  <mat-card class="card-display">
+<mat-card class="login-head-display">
+  <mat-card class="login-card-display">
         <!-- Login Card-->
         <mat-card class="login-card">
           <mat-card-title style="text-align:center">Login</mat-card-title>
@@ -17,14 +17,12 @@
                 </mat-form-field>
               </p>
 
-              <div class="button">
-                <button type="submit" color="primary" id="loginBtn" (click)="login()" type="submit" mat-raised-button>Login</button>
-                <button type="button" color="warn" id="registerBtn" (click)="register()" type="submit" mat-raised-button>Register</button>
+              <div class="login-button-class">
+                <button type="submit" color="primary" id="loginBtn" (click)="login()" mat-raised-button>Login</button>
+                <button type="button" color="warn" id="registerBtn" (click)="toRegister()" mat-raised-button>Register</button>
               </div>
             </form>
           </mat-card-content>
         </mat-card>
   </mat-card>
 </mat-card>
-
-<router-outlet></router-outlet>
