added sidebar for you dani

--- a/src/app/webpages/admin-page/admin-page.component.html
+++ b/src/app/webpages/admin-page/admin-page.component.html
@@ -1,1 +1,21 @@
-<p>admin-page works!</p>
+<mat-sidenav-container class="example-container">
+    <mat-sidenav #sidenav mode="over" [(opened)]="opened" (opened)="events.push('open!')"
+        (closed)="events.push('close!')">
+        Sidenav content
+    </mat-sidenav>
+
+    <mat-toolbar>
+        <button (click)="sidenav.toggle()" mat-icon-button class="example-icon"
+            aria-label="Example icon-button with menu icon">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <span>Admin</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+            <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+            <mat-icon>lock_open</mat-icon>
+        </button>
+    </mat-toolbar>
+</mat-sidenav-container>
