update here also

--- a/src/app/webpages/admin-page/question-admin-page/question-admin-page.component.html
+++ b/src/app/webpages/admin-page/question-admin-page/question-admin-page.component.html
@@ -1,1 +1,36 @@
-<p>question-admin-page works!</p>
+<div class="form-group">
+	<div class="row pad-leftright">
+		<div class="col-md-12">
+			<div (click)="addEmployerToFormArray()">
+				<span><i class="fa fa-plus plus-icon"></i></span>
+        <span class="emp-title">Add Employer</span>
+      </div>
+    </div>
+  </div>
+  <form [formGroup]="tablesForm">
+    <div class="row pad-leftright">
+      <div>
+        <table class="table ft-table simple-table table-equal-columns">
+          <thead class="theader">
+            <tr>
+              <th *ngFor="let x of formFields">{{x.name}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let row of employeeRows.controls; let ind = index;">
+              <td formArrayName="employees" *ngFor="let field of formFields">
+                <div [formGroupName]="ind">
+                  <div>
+                    <div class="form-group">
+                      <input [type]="field.type" class="form-control" id="example-input-3" [placeholder]="field.name" [formControlName]="field.formControl" />
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </form>
+</div>
