--- a/src/app/webpages/admin-page/question-admin-page/question-admin-page.component.html
+++ b/src/app/webpages/admin-page/question-admin-page/question-admin-page.component.html
@@ -1,36 +1,20 @@
-<div class="form-group">
-	<div class="row pad-leftright">
-		<div class="col-md-12">
-			<div (click)="addEmployerToFormArray()">
-				<span><i class="fa fa-plus plus-icon"></i></span>
-        <span class="emp-title">Add Employer</span>
-      </div>
-    </div>
-  </div>
-  <form [formGroup]="tablesForm">
-    <div class="row pad-leftright">
-      <div>
-        <table class="table ft-table simple-table table-equal-columns">
-          <thead class="theader">
-            <tr>
-              <th *ngFor="let x of formFields">{{x.name}}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let row of employeeRows.controls; let ind = index;">
-              <td formArrayName="employees" *ngFor="let field of formFields">
-                <div [formGroupName]="ind">
-                  <div>
-                    <div class="form-group">
-                      <input [type]="field.type" class="form-control" id="example-input-3" [placeholder]="field.name" [formControlName]="field.formControl" />
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </form>
-</div>
+<mat-table [dataSource]="question">
+    <ng-container matColumnDef="questionId">
+      <mat-header-cell *matHeaderCellDef="questionId">No.</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.questionId}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="questionString">
+      <mat-header-cell *matHeaderCellDef="questionString">Question</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.questionString}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="correctAnswer">
+      <mat-header-cell *matHeaderCellDef="correctAnswer">Answer</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.correctAnswer}}</mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click) = "openDialog(row.questionId)"></mat-row>
+ 
+</mat-table>
