--- a/src/app/webpages/admin-page/admin-page.component.html
+++ b/src/app/webpages/admin-page/admin-page.component.html
@@ -4,12 +4,8 @@
             aria-label="Example icon-button with menu icon">
             <mat-icon>menu</mat-icon>
         </button>
-        <span>Admin</span>
+        <span>Hi,{{username}} (Admin) </span>
         <span class="example-spacer"></span>
-
-        <button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon (click)="addQuestion()" >plus</mat-icon>
-        </button>
         <button class="example-icon" aria-label="Example icon-button with share icon">
             <mat-icon (click)="logout()" >lock_open</mat-icon>
         </button>
