--- a/src/app/webpages/admin-page/student-admin-page/dialog/student-detail-dialog/student-detail-dialog.component.html
+++ b/src/app/webpages/admin-page/student-admin-page/dialog/student-detail-dialog/student-detail-dialog.component.html
@@ -1,4 +1,4 @@
-<mat-card class="login-card">
+<!-- <mat-card class="login-card">
     <mat-card-title mat-dialog-title style="text-align:center">Update Question</mat-card-title>
     <mat-card-content mat-dialog-content>
         <form>
@@ -12,12 +12,12 @@
             <p>
                 <mat-form-field style="width:100%">
                     <mat-label>Category</mat-label>
-                    <!-- <mat-select [(value)]="this.question.category" name="category" [(ngModel)]="this.question.category">
+                    <mat-select [(value)]="this.question.category" name="category" [(ngModel)]="this.question.category">
                         <mat-option value="Science">Science</mat-option>
                         <mat-option value="Maths">Maths</mat-option>
                         <mat-option value="English">English</mat-option>
                         <mat-option value="History">History</mat-option>
-                    </mat-select> -->
+                    </mat-select>
                 </mat-form-field>
             </p>
 
@@ -79,4 +79,4 @@
             </div>
         </form>
     </mat-card-content>
-</mat-card>
+</mat-card> -->
