--- a/src/app/webpages/admin-page/question-admin-page/dialog/question-admin-dialog/question-admin-dialog.component.html
+++ b/src/app/webpages/admin-page/question-admin-page/dialog/question-admin-dialog/question-admin-dialog.component.html
@@ -12,12 +12,12 @@
             <p>
                 <mat-form-field style="width:100%">
                     <mat-label>Category</mat-label>
-                    <!-- <mat-select [(value)]="this.question.category" name="category" [(ngModel)]="this.question.category">
+                    <mat-select [(value)]="this.question.category" name="category" [(ngModel)]="this.question.category">
                         <mat-option value="Science">Science</mat-option>
                         <mat-option value="Maths">Maths</mat-option>
                         <mat-option value="English">English</mat-option>
                         <mat-option value="History">History</mat-option>
-                    </mat-select> -->
+                    </mat-select>
                 </mat-form-field>
             </p>
 
