--- a/src/app/webpages/admin-page/student-admin-page/dialog/student-detail-dialog/student-detail-dialog.component.html
+++ b/src/app/webpages/admin-page/student-admin-page/dialog/student-detail-dialog/student-detail-dialog.component.html
@@ -1,82 +1,33 @@
-<!-- <mat-card class="login-card">
-    <mat-card-title mat-dialog-title style="text-align:center">Update Question</mat-card-title>
+<mat-card class="login-card">
+    <mat-card-title mat-dialog-title style="text-align:center">Edit Student</mat-card-title>
     <mat-card-content mat-dialog-content>
-        <form>
+        <form autocomplete="off">
             <p>
                 <mat-form-field style="width:100%">
-                    <input type="text" matInput placeholder="Question String" name="questionString"
-                        [(ngModel)]="this.question.questionString">
+                    <input type="text" matInput placeholder="Edit Username" name="editUsername"
+                       [value]="this.user.username" [(ngModel)]="this.user.username">
+                </mat-form-field>
+            </p>
+
+             <p>
+                <mat-form-field style="width:100%">
+                    <input type="password" matInput placeholder="Change Password" name="changePassword"
+                        [(ngModel)]="this.user.password">
                 </mat-form-field>
             </p>
 
             <p>
                 <mat-form-field style="width:100%">
-                    <mat-label>Category</mat-label>
-                    <mat-select [(value)]="this.question.category" name="category" [(ngModel)]="this.question.category">
-                        <mat-option value="Science">Science</mat-option>
-                        <mat-option value="Maths">Maths</mat-option>
-                        <mat-option value="English">English</mat-option>
-                        <mat-option value="History">History</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field style="width:100%">
-                    <mat-label>Difficuly</mat-label>
-                    <mat-select [(value)]="this.question.marks" name="marks" [(ngModel)]="this.question.marks">
-                        <mat-option [value]=1>Easy</mat-option>
-                        <mat-option [value]=2>Medium</mat-option>
-                        <mat-option [value]=3>Hard</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field style="width:100%">
-                    <input type="text" matInput placeholder="Option 1" name="option1"
-                        [(ngModel)]="this.question.option1">
-                </mat-form-field>
-            </p>
-            <p>
-                <mat-form-field style="width:100%">
-                    <input type="text" matInput placeholder="Option 2" [(ngModel)]="this.question.option2"
-                        name="option2">
-                </mat-form-field>
-            </p>
-            <p>
-                <mat-form-field style="width:100%">
-                    <input type="text" matInput placeholder="Option 3" name="option3"
-                        [(ngModel)]="this.question.option3">
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field style="width:100%">
-                    <input type="text" matInput placeholder="Option 4" name="option4"
-                        [(ngModel)]="this.question.option4">
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field style="width:100%">
-                    <mat-label>Correct Answer</mat-label>
-                    <mat-select [(value)]="this.question.correctAnswer" name="correctAnswer"
-                        [(ngModel)]="this.question.correctAnswer">
-                        <mat-option value="{{this.question.option1}}">{{this.question.option1}}</mat-option>
-                        <mat-option value="{{this.question.option2}}">{{this.question.option2}}</mat-option>
-                        <mat-option value="{{this.question.option3}}">{{this.question.option3}}</mat-option>
-                        <mat-option value="{{this.question.option4}}">{{this.question.option4}}</mat-option>
-                    </mat-select>
+                    <input type="email" matInput placeholder="Change Email" name="changeEmail"
+                        [(ngModel)]="this.user.email">
                 </mat-form-field>
             </p>
 
 
             <div mat-dialog-actions class="button">
-                <button type="submit" (click)="updateQuestion()" color="primary" mat-raised-button>Update</button>
-                <button type="button" (click)="deleteQuestion()" color="warn" mat-raised-button>Delete</button>
-                <button type="button" (click)="onNoClick()" mat-raised-button>Cancel</button>
-            </div>
+                <button type="submit" (click)="updateUser()" color="primary" mat-raised-button>Update</button>
+                <button type="submit" (click)="openDialog()" mat-raised-button>Show Test Results</button>
+                <button type="button" (click)="deleteUser()" color="warn" mat-raised-button>Delete</button></div>
         </form>
     </mat-card-content>
-</mat-card> -->
+</mat-card>
