--- a/src/app/webpages/student-page/student-home/student-home.component.html
+++ b/src/app/webpages/student-page/student-home/student-home.component.html
@@ -1,11 +1,22 @@
+<h1 style="text-align:center">Here are some test for you!</h1>
+
+
 <div class="flex-container">
 
-    <div class="flex-child magenta">
-      Flex Column 1
+    <div *ngFor="let e of category" class="flex-child magenta">
+        <mat-card>
+            <mat-card-header>
+                <h1>{{e}}</h1>
+            </mat-card-header>
+            <mat-card-content>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget iaculis massa. Suspendisse
+                    sed erat commodo, faucibus eros et, sagittis.</p>
+            </mat-card-content>
+
+            <mat-card-actions align="end">
+                <button mat-button (click)="takeTest('question')">Click Here to take the test <mat-icon>arrow_forward</mat-icon></button>
+            </mat-card-actions>
+        </mat-card>
     </div>
-    
-    <div class="flex-child green">
-      Flex Column 2
-    </div>
-    
-  </div>
+
+</div>
