--- a/src/app/webpages/student-page/student-home/student-home.component.scss
+++ b/src/app/webpages/student-page/student-home/student-home.component.scss
@@ -1,12 +1,4 @@
-.flex-container {
-    display: flex;
-}
-
 .flex-child {
+    padding: 5px;
     flex: 1;
-    border: 2px solid yellow;
-}  
-
-.flex-child:first-child {
-    margin-right: 20px;
-} 
+}
