--- a/src/app/webpages/student-page/student-home/student-home.component.html
+++ b/src/app/webpages/student-page/student-home/student-home.component.html
@@ -14,7 +14,7 @@
             </mat-card-content>
 
             <mat-card-actions align="end">
-                <button mat-button (click)="takeTest('question')">Click Here to take the test <mat-icon>arrow_forward</mat-icon></button>
+                <button mat-button (click)="takeTest('question',e)">Click Here to take the test <mat-icon>arrow_forward</mat-icon></button>
             </mat-card-actions>
         </mat-card>
     </div>
