--- a/src/app/webpages/student-page/student-page.component.html
+++ b/src/app/webpages/student-page/student-page.component.html
@@ -7,7 +7,7 @@
         <span>Welcome Student</span>
         <span class="example-spacer"></span>
         <button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon  >lock_open</mat-icon>
+            <mat-icon (click) = "logout()" >lock_open</mat-icon>
         </button>
     </mat-toolbar>
 
@@ -17,7 +17,6 @@
 
         <mat-action-list class="sidenav-items">
             <button mat-list-item > History </button>
-            <button mat-list-item > Edit Users </button>
         </mat-action-list>
     </mat-sidenav>
 
